# Progetto-per-sviluppo-e-ciclo-vitale-di-software-di-intelligenza-artificiale-VR485893

./: .gitignore  Dockerfile  MakeFile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: cifar_train.py  eda.py
tests/: eda_test.py  train_test.py
